[gd_scene load_steps=31 format=3 uid="uid://dgdgdthqeiu8l"]

[ext_resource type="Script" path="res://scenes/entities/blob.gd" id="1_q7i0q"]
[ext_resource type="Texture2D" uid="uid://cl7gcmdtxcud5" path="res://assets/entities/blob/blob-death.png" id="1_rn68d"]
[ext_resource type="Texture2D" uid="uid://d1i2n7yoe5chf" path="res://assets/entities/blob/blob-idle-unscaled.png" id="2_i2o4j"]
[ext_resource type="Texture2D" uid="uid://bn12kh2ve86bo" path="res://assets/entities/blob/blob-sleep.png" id="2_m5hlu"]
[ext_resource type="Texture2D" uid="uid://bcl86b2gin2ec" path="res://assets/entities/blob/blob-jump-unscaled.png" id="3_x7gap"]
[ext_resource type="Texture2D" uid="uid://btxr0f08ctr33" path="res://assets/entities/blob/blob-to-sleep.png" id="6_xjd2o"]
[ext_resource type="PackedScene" uid="uid://dmxenxbixn288" path="res://scenes/overlay/healthbar.tscn" id="7_gicec"]

[sub_resource type="Animation" id="Animation_bux2b"]
resource_name = "death"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rn68d")]
}

[sub_resource type="Animation" id="Animation_aisxj"]
resource_name = "go-sleep"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_xjd2o")]
}

[sub_resource type="Animation" id="Animation_ywe65"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_i2o4j")]
}

[sub_resource type="Animation" id="Animation_5vsvr"]
resource_name = "jump"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_x7gap")]
}

[sub_resource type="Animation" id="Animation_823x2"]
resource_name = "sleep"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_m5hlu")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bayk7"]
_data = {
"death": SubResource("Animation_bux2b"),
"go-sleep": SubResource("Animation_aisxj"),
"idle": SubResource("Animation_ywe65"),
"jump": SubResource("Animation_5vsvr"),
"sleep": SubResource("Animation_823x2")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_14asq"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tpn7c"]
animation = &"go-sleep"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_64686"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sohqr"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y7mqs"]
animation = &"sleep"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5n28c"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g8d0t"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hefpm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eg7nb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j7cbi"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1l4y7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3k6ng"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vfldl"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_nif5s"]
states/death/node = SubResource("AnimationNodeAnimation_14asq")
states/death/position = Vector2(507, 125)
states/go-sleep/node = SubResource("AnimationNodeAnimation_tpn7c")
states/go-sleep/position = Vector2(242, 234)
states/idle/node = SubResource("AnimationNodeAnimation_64686")
states/idle/position = Vector2(342, 100)
states/jump/node = SubResource("AnimationNodeAnimation_sohqr")
states/jump/position = Vector2(378, 183)
states/sleep/node = SubResource("AnimationNodeAnimation_y7mqs")
states/sleep/position = Vector2(226, 158)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_5n28c"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_g8d0t"), "jump", "death", SubResource("AnimationNodeStateMachineTransition_hefpm"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_eg7nb"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_j7cbi"), "idle", "go-sleep", SubResource("AnimationNodeStateMachineTransition_1l4y7"), "go-sleep", "sleep", SubResource("AnimationNodeStateMachineTransition_3k6ng"), "sleep", "idle", SubResource("AnimationNodeStateMachineTransition_vfldl")]
graph_offset = Vector2(-102, 54)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o6tvh"]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_53g3q"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_xw05j"]
radius = 86.0233

[node name="blob" type="CharacterBody2D" groups=["Blob", "can_hit"]]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_q7i0q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i2o4j")
hframes = 3
vframes = 2
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bayk7")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bayk7")
}
tree_root = SubResource("AnimationNodeStateMachine_nif5s")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_o6tvh")

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_53g3q")

[node name="Timer2" type="Timer" parent="."]

[node name="detection_radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_radius"]
shape = SubResource("CircleShape2D_xw05j")

[node name="hit_invul_timer" type="Timer" parent="."]

[node name="healthbar" parent="." instance=ExtResource("7_gicec")]

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="body_entered" from="detection_radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="detection_radius" to="." method="_on_detection_radius_body_exited"]
[connection signal="timeout" from="hit_invul_timer" to="." method="_on_hit_invul_timer_timeout"]
